add text background

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
       <div class="blog">变相引用</div>
       <p style="margin:0 0 5px 0px; padding:0px 10px; border-left:5px solid #0FBBE5; color:#0FBBE5;">标题</p>
       <p style="margin:auto 0px; padding:0px 20px; font-size:14px;">文本<br>文本</p>
-            <br>
+      <br>
 
       </div>
 
     
       <div>
-      <div class="blog">虚线框</div>
+        <div class="blog">虚线框</div>
         <p style="padding:10px 10px; border:2px dashed #c9c9c9; font-size:14px; color: #c7254e;">请在此处输入文本<br>此处省略800字......</p>
         <br>
       </div>
@@ -97,6 +97,20 @@
         <br>
 
       </div>
+
+
+        <div>
+          <div class="blog">带背景样式</div>
+            <p style="padding:10px 22px;background:#FFF center url(img/textbg.png) repeat-y fixed; background-size:91%; display:block; border-radius: 4px">
+            这是一段文本 <br>
+            这是一段文本<br>
+            这是一段文本<br>
+            这是一段文本<br>
+            这是一段文本<br>
+            这是一段文本
+            </p>
+
+        </div>
 
 
       <div>
@@ -173,7 +187,6 @@
           </table>
           <br>
         </div>
-
 
         <div class="blog">尾部样式</div>
         <p style="white-space: normal; text-align: center;">
