--- a/index.html
+++ b/index.html
@@ -22,20 +22,16 @@
     <h2>微信公众平台排版样式模板</h2><br>
       <div>
       <div class="blog">标准引用</div>
-      <blockquote style="padding:0 10px; border-left: 5px solid #0FBBE5;">
-        <p style="margin:auto 0px -15px -10px; padding:5px 10px;  color:#0FBBE5; ">标题</p>
-      </blockquote>
-      <p style="margin:auto 0px; padding:0px 20px; font-size:14px;">文本</p>
-      <br>
+
+      <p style="margin:auto 0px; padding:0px 20px;"></p>
+
+                  <blockquote style="margin: 0px; max-width: 100%; background-color: #FFF; border-left: none">
+        <p style="margin:auto 0px 5px -16px; padding:1px 10px; font-size:16px; color:#00bbec; border-left-width: 5px; border-left-style: solid; border-left-color:#00bbec;">标题</p>
+        <p style="margin:auto 0px; padding:0px 10px; font-size:14px;">
+            测试文本<br>
+                    </blockquote>
       </div>
 
-      <div>
-      <div class="blog">变相引用</div>
-      <p style="margin:0 0 5px 0px; padding:0px 10px; border-left:5px solid #0FBBE5; color:#0FBBE5;">标题</p>
-      <p style="margin:auto 0px; padding:0px 20px; font-size:14px;">文本<br>文本</p>
-      <br>
-
-      </div>
 
     
       <div>
@@ -101,7 +97,7 @@
 
         <div>
           <div class="blog">带背景样式</div>
-            <p style="padding:10px 22px;background:#FFF center url(img/textbg.png) repeat-y fixed; background-size:91%; display:block; border-radius: 4px">
+            <p style="padding:10px 22px;background:#FFF center url(http://imim.u.qiniudn.com/textbg.png) repeat-y fixed; background-size:91%; display:block; border-radius: 4px">
             这是一段文本 <br>
             这是一段文本<br>
             这是一段文本<br>
